--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
+    "classnames": "2.2.3",
     "object-assign": "4.0.1",
     "react": "0.14.0",
     "react-dom": "0.14.0",
