--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-slingshot",
-  "version": "1.0.1",
-  "description": "Starter kit for creating apps with React and Redux",
+  "name": "react-slingshot-plus",
+  "version": "1.0.0",
+  "description": "Starter kit for creating medium to large apps with React and Redux",
   "scripts": {
     "prestart": "npm run remove-dist",
     "start": "parallelshell \"npm run test:watch\" \"npm run open:src\"",
@@ -19,7 +19,7 @@
     "test": "cross-env NODE_ENV=test mocha --reporter progress --compilers js:babel/register --recursive \"./src/**/*.spec.js\"",
     "test:watch": "npm run test -- --watch"
   },
-  "author": "Cory House",
+  "authors": "Chris Barnes",
   "license": "MIT",
   "dependencies": {
     "classnames": "2.2.3",
